@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-01-23T16:06:45Z",
+  "timestamp" : "2024-01-24T08:07:49Z",
   "count_outdated" : 3576,
   "uniques_outdated" : 1575,
-  "count" : 3719,
-  "uniques" : 1677,
+  "count" : 3722,
+  "uniques" : 1679,
   "clones" : [
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 25,
+      "count": 8,
       "count_minmax": [ 8, 25 ],
-      "count_decinc": [ 0, 25 ],
-      "uniques": 18,
+      "count_decinc": [ 17, 25 ],
+      "uniques": 7,
       "uniques_minmax": [ 7, 18 ],
-      "uniques_decinc": [ 0, 18 ]
+      "uniques_decinc": [ 11, 18 ]
     },
     {
       "timestamp": "2024-01-11T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 8,
       "uniques_minmax": [ 1, 8 ],
       "uniques_decinc": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2024-01-24T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
