@@ -1,11 +1,11 @@
 {
-  "count": 143,
-  "uniques": 73,
+  "count": 129,
+  "uniques": 67,
   "clones": [
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 25,
-      "uniques": 18
+      "count": 8,
+      "uniques": 7
     },
     {
       "timestamp": "2024-01-11T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 11,
       "uniques": 8
+    },
+    {
+      "timestamp": "2024-01-24T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
