@@ -1,3 +1,12 @@
+2024-01-24T08:07:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7637233804 # 52
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
+* notice: last 14d: unq all: 67 129
+* notice: prev accum: outdated-unq outdated-all / unq all: 1575 3576 / 1677 3719
+* notice: next accum: outdated-unq outdated-all / unq all: 1575 3576 / 1679 3722
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -11 -17 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2024-01-10 2024-01-24]
+
 2024-01-23T16:06:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7628526834 # 50
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
